MB-59966: Ensure NonBucketAllocationGuard switches back to prev Domain

Observed while running some ep_testsuite magma compaction test, where
an instance of MagmaCompactionCB is released after we make a
logger->debug() call in the dtor.

  MagmaKVStore::MagmaCompactionCB::~MagmaCompactionCB() {
      magmaKVStore.logger->debug("MagmaCompactionCB destructor");
  }

The BucketLogger API formats/logs under NonBucketAllocationGuard, which
correctly resets to the callee bucket client when done. Problem is,
NonBucketAllocationGuard resets the bucket client to the Primary domain
unconditionally, so calls from the Secondary domain would cause
deallocation mismatches.

Verified by:

% env CB_ARENA_MALLOC_VERIFY_DEALLOC_CLIENT=1 <..>/source/build/kv_engine/ep_testsuite "-v" "-e" "dbname=./ep_testsuite.value_eviction.magma;backend=magma" -C 4

Before fix:

===ERROR===: JeArenaMalloc deallocation mismatch
	Memory freed by client:0 domain:Primary which is assigned arena:2, but memory was previously allocated from arena:3 (client-specific arena).
	Allocation address:0x107a000a0 size:144

Change-Id: I0aee75433e0ed5acf26a06983451f4ae78df2fa4
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/228051
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>